adding validation to slo option
